--- a/TestVaultMeli/TestVaultMeli/Xplore/XploreViewController.xib
+++ b/TestVaultMeli/TestVaultMeli/Xplore/XploreViewController.xib
@@ -19,31 +19,56 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1DE-9p-65i">
-                    <rect key="frame" x="16" y="103" width="361" height="34"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="systemYellowColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                </textField>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="33L-ey-pMB">
-                    <rect key="frame" x="163" y="145" width="68" height="35"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" title="Hallar"/>
-                    <connections>
-                        <action selector="didXplore:" destination="-1" eventType="touchUpInside" id="3Uo-Zd-elx"/>
-                    </connections>
-                </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="42X-Cz-xhz">
+                    <rect key="frame" x="0.0" y="97.666666666666686" width="393" height="681.66666666666652"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="33L-ey-pMB">
+                            <rect key="frame" x="98" y="331.66666666666663" width="197" height="34"/>
+                            <color key="backgroundColor" systemColor="systemBlueColor"/>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="plain" title="Encontrar"/>
+                            <connections>
+                                <action selector="didXplore:" destination="-1" eventType="touchUpInside" id="3Uo-Zd-elx"/>
+                            </connections>
+                        </button>
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Encuentra productos" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1DE-9p-65i">
+                            <rect key="frame" x="-0.33333333333334281" y="289.66666666666663" width="393.66666666666674" height="34"/>
+                            <color key="backgroundColor" systemColor="systemYellowColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="1DE-9p-65i" firstAttribute="width" secondItem="42X-Cz-xhz" secondAttribute="width" constant="0.80000000000000004" id="7u6-z0-mR7"/>
+                        <constraint firstItem="33L-ey-pMB" firstAttribute="centerX" secondItem="42X-Cz-xhz" secondAttribute="centerX" id="Bom-33-l3E"/>
+                        <constraint firstItem="1DE-9p-65i" firstAttribute="height" secondItem="42X-Cz-xhz" secondAttribute="height" multiplier="0.0499266" id="Kx4-c9-3Ug"/>
+                        <constraint firstItem="1DE-9p-65i" firstAttribute="centerY" secondItem="42X-Cz-xhz" secondAttribute="centerY" multiplier="0.9" id="l3a-Df-SxT"/>
+                        <constraint firstItem="33L-ey-pMB" firstAttribute="width" secondItem="1DE-9p-65i" secondAttribute="width" multiplier="0.5" id="qa8-8k-tHs"/>
+                        <constraint firstItem="33L-ey-pMB" firstAttribute="top" secondItem="1DE-9p-65i" secondAttribute="bottom" constant="8" id="u65-wF-zmg"/>
+                        <constraint firstItem="33L-ey-pMB" firstAttribute="height" secondItem="1DE-9p-65i" secondAttribute="height" id="xsP-3C-Tp6"/>
+                        <constraint firstItem="1DE-9p-65i" firstAttribute="centerX" secondItem="42X-Cz-xhz" secondAttribute="centerX" id="zzG-WG-f2S"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="42X-Cz-xhz" firstAttribute="centerY" secondItem="fnl-2z-Ty3" secondAttribute="centerY" id="8hT-SK-65t"/>
+                <constraint firstItem="42X-Cz-xhz" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="IZ2-iR-rGn"/>
+                <constraint firstItem="42X-Cz-xhz" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.8" id="rLa-DU-auY"/>
+                <constraint firstItem="42X-Cz-xhz" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="vtP-0t-dcS"/>
+            </constraints>
             <point key="canvasLocation" x="136.64122137404578" y="20.422535211267608"/>
         </view>
     </objects>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemYellowColor">
             <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
