--- a/TestVaultMeli/TestVaultMeli/Xplore/XploreViewController.xib
+++ b/TestVaultMeli/TestVaultMeli/Xplore/XploreViewController.xib
@@ -23,30 +23,41 @@
                     <rect key="frame" x="0.0" y="97.666666666666686" width="393" height="681.66666666666652"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="33L-ey-pMB">
-                            <rect key="frame" x="98" y="331.66666666666663" width="197" height="34"/>
+                            <rect key="frame" x="38.666666666666657" y="349" width="315.66666666666674" height="68"/>
                             <color key="backgroundColor" systemColor="systemBlueColor"/>
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <state key="normal" title="Button"/>
-                            <buttonConfiguration key="configuration" style="plain" title="Encontrar"/>
+                            <buttonConfiguration key="configuration" style="plain" title="Encontrar">
+                                <fontDescription key="titleFontDescription" style="UICTFontTextStyleBody"/>
+                            </buttonConfiguration>
                             <connections>
                                 <action selector="didXplore:" destination="-1" eventType="touchUpInside" id="3Uo-Zd-elx"/>
                             </connections>
                         </button>
                         <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Encuentra productos" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1DE-9p-65i">
-                            <rect key="frame" x="-0.33333333333334281" y="289.66666666666663" width="393.66666666666674" height="34"/>
-                            <color key="backgroundColor" systemColor="systemYellowColor"/>
+                            <rect key="frame" x="38.666666666666657" y="272.66666666666663" width="315.66666666666674" height="68.333333333333314"/>
+                            <color key="backgroundColor" red="0.9864369959" green="0.91337321699999996" blue="0.3661658559" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconTestVaultMeli" translatesAutoresizingMaskIntoConstraints="NO" id="cN9-KU-IFK">
+                            <rect key="frame" x="146" y="0.0" width="101" height="101"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="101" id="9z7-eM-mX5"/>
+                                <constraint firstAttribute="width" constant="101" id="T0W-av-957"/>
+                            </constraints>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="1DE-9p-65i" firstAttribute="width" secondItem="42X-Cz-xhz" secondAttribute="width" constant="0.80000000000000004" id="7u6-z0-mR7"/>
+                        <constraint firstItem="1DE-9p-65i" firstAttribute="width" secondItem="42X-Cz-xhz" secondAttribute="width" multiplier="0.8" constant="1" id="7u6-z0-mR7"/>
                         <constraint firstItem="33L-ey-pMB" firstAttribute="centerX" secondItem="42X-Cz-xhz" secondAttribute="centerX" id="Bom-33-l3E"/>
-                        <constraint firstItem="1DE-9p-65i" firstAttribute="height" secondItem="42X-Cz-xhz" secondAttribute="height" multiplier="0.0499266" id="Kx4-c9-3Ug"/>
+                        <constraint firstItem="1DE-9p-65i" firstAttribute="height" secondItem="42X-Cz-xhz" secondAttribute="height" multiplier="0.1" id="Kx4-c9-3Ug"/>
+                        <constraint firstItem="cN9-KU-IFK" firstAttribute="centerX" secondItem="42X-Cz-xhz" secondAttribute="centerX" id="enP-1g-pmS"/>
                         <constraint firstItem="1DE-9p-65i" firstAttribute="centerY" secondItem="42X-Cz-xhz" secondAttribute="centerY" multiplier="0.9" id="l3a-Df-SxT"/>
-                        <constraint firstItem="33L-ey-pMB" firstAttribute="width" secondItem="1DE-9p-65i" secondAttribute="width" multiplier="0.5" id="qa8-8k-tHs"/>
+                        <constraint firstItem="33L-ey-pMB" firstAttribute="width" secondItem="1DE-9p-65i" secondAttribute="width" id="qa8-8k-tHs"/>
                         <constraint firstItem="33L-ey-pMB" firstAttribute="top" secondItem="1DE-9p-65i" secondAttribute="bottom" constant="8" id="u65-wF-zmg"/>
+                        <constraint firstItem="cN9-KU-IFK" firstAttribute="top" secondItem="42X-Cz-xhz" secondAttribute="top" id="uTE-6n-tAX"/>
                         <constraint firstItem="33L-ey-pMB" firstAttribute="height" secondItem="1DE-9p-65i" secondAttribute="height" id="xsP-3C-Tp6"/>
                         <constraint firstItem="1DE-9p-65i" firstAttribute="centerX" secondItem="42X-Cz-xhz" secondAttribute="centerX" id="zzG-WG-f2S"/>
                     </constraints>
@@ -64,14 +75,12 @@
         </view>
     </objects>
     <resources>
+        <image name="iconTestVaultMeli" width="804" height="806"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
